k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bizbook-crm-c
  namespace: colossus-bizbook-crm-c
  labels:
    app: bizbook-crm-c
    managed-by: colossus
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bizbook-crm-c
  template:
    metadata:
      labels:
        app: bizbook-crm-c
    spec:
      hostAliases:
        - ip: "192.168.50.250"
          hostnames:
            - "ubuntu.desmana-truck.ts.net"
      containers:
        - name: app
          image: ubuntu:30500/bizbook-crm-c:latest
          imagePullPolicy: Always
